--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,7 @@ jobs:
     - name: Test
       run: |
         pymol -ckqy testing/testing.py --run all
+        python -m pytest tests -vv
 
   build-Windows:
 
@@ -99,6 +100,7 @@ jobs:
       run: |
         CALL %CONDA_ROOT%\\Scripts\\activate.bat
         pymol -ckqy testing\\testing.py --run all
+        python -m pytest tests -vv
 
   build-MacOS:
 
@@ -135,3 +137,4 @@ jobs:
       run: |-
         export PATH="$CONDA_ROOT/bin:$PATH"
         pymol -ckqy testing/testing.py --run all
+        python -m pytest tests -vv
