--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,6 @@ jobs:
         sudo apt-get update;
         sudo apt-get --no-install-recommends install
         catch2
-        cmake
         libfreetype6-dev
         libglew-dev
         libglm-dev
@@ -23,12 +22,6 @@ jobs:
         libnetcdf-dev
         libpng-dev
         libxml2-dev
-        python-is-python3
-        python3-biopython
-        python3-dev
-        python3-setuptools
-        python3-numpy
-        python3-pip
 
     - name: Install collada2gltf
       run: |
@@ -72,7 +65,7 @@ jobs:
       shell: cmd
       run: |-
         CALL %CONDA_ROOT%\\Scripts\\activate.bat
-        conda install -y -c conda-forge -c schrodinger python cmake libpng freetype pyside6 glew libxml2 catch2=2.13.3 glm libnetcdf collada2gltf biopython msgpack-python pip python-build libffi
+        conda install -y -c conda-forge -c schrodinger libpng freetype glew libxml2 catch2=2.13.3 glm libnetcdf collada2gltf libffi
 
     - name: Conda info
       shell: cmd
@@ -115,7 +108,7 @@ jobs:
         bash $CONDA_ROOT.sh -b -p $CONDA_ROOT
         export PATH="$CONDA_ROOT/bin:$PATH"
         conda config --set quiet yes
-        conda install -y -c conda-forge -c schrodinger python cmake libpng freetype pyside6 glew libxml2 catch2=2.13.3 glm libnetcdf collada2gltf biopython msgpack-python pip python-build
+        conda install -y -c conda-forge -c schrodinger python libpng freetype glew libxml2 catch2=2.13.3 glm libnetcdf collada2gltf
         conda info
 
     - name: Get additional sources
