--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,28 +7,30 @@ jobs:
 
     runs-on: ubuntu-22.04
 
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+
     steps:
-    - uses: actions/checkout@v4.0.0
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
 
     - name: Install system dependencies
-      run: >
-        sudo apt-get update;
-        sudo apt-get --no-install-recommends install
-        catch2
-        cmake
-        libfreetype6-dev
-        libglew-dev
-        libglm-dev
-        libmsgpack-dev
-        libnetcdf-dev
-        libpng-dev
-        libxml2-dev
-        python-is-python3
-        python3-biopython
-        python3-dev
-        python3-setuptools
-        python3-numpy
-        python3-pip
+      run: |
+        sudo apt-get update
+        sudo apt-get --no-install-recommends install \
+            catch2 \
+            libfreetype6-dev \
+            libglew-dev \
+            libglm-dev \
+            libmsgpack-dev \
+            libnetcdf-dev \
+            libpng-dev \
+            libxml2-dev
 
     - name: Install collada2gltf
       run: |
@@ -38,7 +40,7 @@ jobs:
     - name: Get additional sources
       run: |
         git clone --depth 1 https://github.com/rcsb/mmtf-cpp.git
-        cp -R mmtf-cpp/include/mmtf* include/
+        cp -R mmtf-cpp/include/* include/
 
     - name: Build
       run: |
@@ -51,87 +53,120 @@ jobs:
       run: |
         pymol -ckqy testing/testing.py --run all
 
+
   build-Windows:
 
     runs-on: windows-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+
     env:
-      CONDA_ROOT: ${{github.workspace}}\..\tmp\miniforge
-      MINIFORGE_EXEC: ${{github.workspace}}\..\tmp\miniforge.exe
+      CONDA_ENV_NAME: "testing_env"
 
     steps:
-    - uses: actions/checkout@v4.0.0
-    - name: Download Miniforge
-      shell: cmd
-      run: |-
-        if not exist %CONDA_ROOT% mkdir %CONDA_ROOT%
-        curl -L -o %MINIFORGE_EXEC% https://github.com/conda-forge/miniforge/releases/download/24.11.0-0/Miniforge3-24.11.0-0-Windows-x86_64.exe
-        start /wait %MINIFORGE_EXEC% /S /D=%CONDA_ROOT%
+    - uses: actions/checkout@v4
+
+    - name: Install Miniforge
+      run: |
+        choco install miniforge3
+
+    - name: Add conda to PATH
+      run: |
+        echo "$env:CONDA" | Out-File -Append -FilePath $env:GITHUB_PATH
+        echo "$env:CONDA\Scripts" | Out-File -Append -FilePath $env:GITHUB_PATH
 
     - name: Set up Miniforge
-      shell: cmd
-      run: |-
-        CALL %CONDA_ROOT%\\Scripts\\activate.bat
-        conda install -y -c conda-forge -c schrodinger python cmake libpng freetype pyside6 glew libxml2 catch2=2.13.3 glm libnetcdf collada2gltf biopython msgpack-python pip python-build
-
-    - name: Conda info
-      shell: cmd
-      run: |-
-        CALL %CONDA_ROOT%\\Scripts\\activate.bat
-        conda info
+      run: |
+        conda init powershell
+        conda create --name $env:CONDA_ENV_NAME -c conda-forge -c schrodinger `
+            python=${{ matrix.python-version }} `
+            pip `
+            catch2=2.13.3 `
+            collada2gltf `
+            freetype `
+            glew `
+            glm `
+            libpng `
+            libxml2 `
+            libnetcdf `
 
     - name: Get additional sources
-      shell: cmd
       run: |
+        conda activate $env:CONDA_ENV_NAME
+
         git clone --depth 1 https://github.com/rcsb/mmtf-cpp.git
-        cp -R mmtf-cpp/include/mmtf* %CONDA_ROOT%/Library/include/
+        Copy-Item -Recurse -Path mmtf-cpp/include\* -Destination "$env:CONDA_PREFIX\Library\include"
         git clone --depth 1 --single-branch --branch cpp_master https://github.com/msgpack/msgpack-c.git
-        cp -R msgpack-c/include/msgpack* %CONDA_ROOT%/Library/include/
+        Copy-Item -Recurse -Path msgpack-c/include\* -Destination "$env:CONDA_PREFIX\Library\include"
+        dir $env:CONDA_PREFIX\Library\include
 
     - name: Build PyMOL
-      shell: cmd
       run: |
-        CALL %CONDA_ROOT%\\Scripts\\activate.bat
+        conda activate $env:CONDA_ENV_NAME
         pip install -v --config-settings testing=True .[dev]
 
     - name: Test
-      shell: cmd
       run: |
-        CALL %CONDA_ROOT%\\Scripts\\activate.bat
-        pymol -ckqy testing\\testing.py --run all
+        conda activate $env:CONDA_ENV_NAME
+        pymol -ckqy testing\testing.py --run all
+
 
   build-MacOS:
 
     runs-on: macos-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+
     env:
       CONDA_ROOT: "/tmp/miniforge"
+      CONDA_ENV_NAME: "testing_env"
 
     steps:
     - uses: actions/checkout@v4.0.0
-    - name: Set up Miniforge and Build
-      run: |-
+
+    - name: Download Miniforge
+      run: |
         curl -L -o $CONDA_ROOT.sh https://github.com/conda-forge/miniforge/releases/download/24.11.0-0/Miniforge3-MacOSX-x86_64.sh
         bash $CONDA_ROOT.sh -b -p $CONDA_ROOT
-        export PATH="$CONDA_ROOT/bin:$PATH"
-        conda config --set quiet yes
-        conda install -y -c conda-forge -c schrodinger python cmake libpng freetype pyside6 glew libxml2 catch2=2.13.3 glm libnetcdf collada2gltf biopython msgpack-python pip python-build
-        conda info
+
+    - name: Add conda to PATH
+      run: |
+        echo "${CONDA_ROOT}/bin" >> "$GITHUB_PATH"
+
+    - name: Set up Miniforge
+      run: |
+        conda create --name $CONDA_ENV_NAME -c conda-forge -c schrodinger \
+            python=${{ matrix.python-version }} \
+            pip \
+            catch2=2.13.3 \
+            collada2gltf \
+            freetype \
+            glew \
+            glm \
+            libpng \
+            libxml2 \
+            libnetcdf
 
     - name: Get additional sources
       run: |
+        source activate $CONDA_ENV_NAME
         git clone --depth 1 https://github.com/rcsb/mmtf-cpp.git
-        cp -R mmtf-cpp/include/mmtf* ${CONDA_ROOT}/include/
+        cp -R mmtf-cpp/include/* ${CONDA_PREFIX}/include/
         git clone --depth 1 --single-branch --branch cpp_master https://github.com/msgpack/msgpack-c.git
-        cp -R msgpack-c/include/msgpack* ${CONDA_ROOT}/include/
+        cp -R msgpack-c/include/* ${CONDA_PREFIX}/include/
 
     - name: Build PyMOL
-      run: |-
+      run: |
+        source activate $CONDA_ENV_NAME
         export MACOSX_DEPLOYMENT_TARGET=12.0
-        export PATH="$CONDA_ROOT/bin:$PATH"
         pip install -v --config-settings testing=True '.[dev]'
 
     - name: Test
-      run: |-
-        export PATH="$CONDA_ROOT/bin:$PATH"
+      run: |
+        source activate $CONDA_ENV_NAME
         pymol -ckqy testing/testing.py --run all
+
