--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,14 +21,19 @@ dependencies = [
 build-backend = "backend"
 backend-path = ["_custom_build"]
 requires = [
+  "cmake>=3.13.3",
   "numpy>=2.0",
   "setuptools>=69.2.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-  "pillow==10.3.0",
+  "biopython>=1.80",
+  "msgpack==1.0.8",
+  "pillow==11.1.0",
+  "PySide6==6.8.1",
   "pytest==8.2.2",
+  "requests==2.32.3",
 ]
 
 [project.urls]
