--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "pymol"
 readme = "README.md"
 requires-python = ">=3.9"
 dynamic=["version"]
-license = {file = "LICENSE"}
+license-files = ["LICENSE"]
 description = """
 PyMOL is a Python-enhanced molecular graphics tool.
 It excels at 3D visualization of proteins, small molecules, density,
@@ -21,9 +21,9 @@ dependencies = [
 build-backend = "backend"
 backend-path = ["_custom_build"]
 requires = [
-  "cmake>=3.13.3",
+  "cmake>=3.15.3",
   "numpy>=2.0",
-  "setuptools>=69.2.0",
+  "setuptools>=77.0.0",
 ]
 
 [project.optional-dependencies]
