searching libs via cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,37 +6,22 @@ set(CMAKE_VERBOSE_MAKEFILE on)
 set(Python_FIND_VIRTUALENV FIRST)
 set(Python_FIND_STRATEGY LOCATION)
 
-find_package(Python REQUIRED COMPONENTS Interpreter Development NumPy)
-
 add_library(${TARGET_NAME} SHARED ${ALL_SRC})
 
 foreach(FOLDER_NAME IN ITEMS layer0 layer1 layer2 layer3 layer4 layer5 ov)
     include(${CMAKE_CURRENT_SOURCE_DIR}/${FOLDER_NAME}/sources.cmake)
 endforeach()
 
-target_link_options(${TARGET_NAME} PRIVATE
-    "$<$<PLATFORM_ID:Darwin>:LINKER:-undefined,dynamic_lookup>"
-)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+include(Helpers)
+include(Dependencies)
+# Darwin, Windows, Linux
+include(platform/${CMAKE_SYSTEM_NAME})
+# MSVC, GCC, Clang
+include(compiler/${CMAKE_CXX_COMPILER_FRONTEND_VARIANT})
 
 target_compile_options(${TARGET_NAME} PRIVATE
-    ${ALL_COMP_ARGS}
-
-    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:
-        -Werror=return-type
-        -Wunused-variable
-        -Wno-switch
-        -Wno-narrowing
-        -Wno-char-subscripts
-        $<$<CONFIG:Debug>:-Og>
-        $<$<NOT:$<CONFIG:Debug>>:-O3>
-    >
-    $<$<CXX_COMPILER_ID:MSVC>:/MP>
-    $<$<CXX_COMPILER_ID:MSVC>:/std:c++17>
-    $<$<AND:$<CONFIG:Debug>,$<CXX_COMPILER_ID:MSVC>>:/Z7>
-
-    # optimization currently causes a clang segfault on OS X 10.9 when
-    # compiling layer2/RepCylBond.cpp
-    $<$<PLATFORM_ID:Darwin>:-fno-strict-aliasing>
+    ${PYMOL_COMPILE_OPTIONS}
 )
 
 execute_process(
@@ -44,23 +29,6 @@ execute_process(
     OUTPUT_VARIABLE PYTHON_MODULE_SUFFIX
     OUTPUT_STRIP_TRAILING_WHITESPACE
 )
-
-function(set_output_path lib path)
-    set_target_properties(${lib} PROPERTIES
-	PREFIX ""
-	SUFFIX "${PYTHON_MODULE_SUFFIX}"
-	OUTPUT_NAME "${lib}"
-        LIBRARY_OUTPUT_DIRECTORY "${path}"
-        RUNTIME_OUTPUT_DIRECTORY "${path}"
-    )
-
-    foreach(CONFIG IN ITEMS RELEASE DEBUG RELWITHDEBINFO MINSIZEREL)
-        set_target_properties(${lib} PROPERTIES
-            LIBRARY_OUTPUT_DIRECTORY_${CONFIG} "${path}"
-            RUNTIME_OUTPUT_DIRECTORY_${CONFIG} "${path}"
-        )
-    endforeach()
-endfunction()
 
 set_output_path(${TARGET_NAME} "${Python_SITEARCH}/pymol")
 
@@ -72,31 +40,16 @@ target_include_directories(${TARGET_NAME} PUBLIC
     ${ALL_INC_DIR}
     ${Python_INCLUDE_DIRS}
     ${Python_NumPy_INCLUDE_DIRS}
+    ${PYMOL_INC_DIRS}
 )
 
-target_link_directories(${TARGET_NAME} PUBLIC
-    ${ALL_LIB_DIR}
-    $<$<CXX_COMPILER_ID:MSVC>:${Python_LIBRARY_DIRS}>
-)
 target_link_libraries(${TARGET_NAME}
-    ${ALL_LIB}
-    ${ALL_EXT_LINK}
-    # pyconfig.py forces linking against pythonXY.lib on MSVC
-    $<$<CXX_COMPILER_ID:MSVC>:${Python_LIBRARIES}>
-    $<$<AND:$<CONFIG:Debug>,$<CXX_COMPILER_ID:MSVC>>:/DEBUG>
+    ${PYMOL_LIBS}
 )
 
 target_compile_definitions(${TARGET_NAME} PUBLIC
-    ${ALL_DEF}
-    _PYMOL_LIBPNG
-    _PYMOL_FREETYPE
+    ${PYMOL_DEF_MACROS}
     _PYMOL_NUMPY
-    $<$<CXX_COMPILER_ID:MSVC>:WIN32>
-    $<$<PLATFORM_ID:Darwin>:PYMOL_CURVE_VALIDATE>
-
-    # bounds checking in STL containers
-    # if DEBUG and not Windows compiler
-    $<$<AND:$<CONFIG:Debug>,$<NOT:$<CXX_COMPILER_ID:MSVC>>>:_GLIBCXX_ASSERTIONS>
 )
 
 add_subdirectory(contrib/champ)
